<resources>
    <string name="app_name">ColorBlend</string>
    <string name="action_hsv">HSV</string>
    <string name="action_rgb">RGB</string>
    <string name="action_ycbcr">YCbCr</string>
    <string name="action_cmyk">CMYK</string>
    <string name="title_activity_color_info">ColorBlend</string>
    <string name="button_text">Touch me for more information about this color</string>
    <string name="action_settings">Settings</string>
    <string name="change_background">Switch Background Color</string>
    <string name="title_activity_camera_color">CameraColorActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
