<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context="jenarvaezg.colorselectorcojonudo.MainActivity">
    <item android:id="@+id/action_rgb" android:title="@string/action_rgb"
        android:orderInCategory="100" android:showAsAction="always" />
    <item android:id="@+id/action_hsv" android:title="@string/action_hsv"
        android:orderInCategory="100" android:showAsAction="always" />
    <item android:id="@+id/action_ycbcr" android:title="@string/action_ycbcr"
        android:orderInCategory="100" android:showAsAction="always" />
    <item android:id="@+id/action_cmyk" android:title="@string/action_cmyk"
        android:orderInCategory="100" android:showAsAction="always" />
    <item android:id="@+id/action_change_background" android:title="@string/change_background"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
